--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,7 +10,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
-    <include layout="@layout/app_bar_layout" android:id="@+id/home_page_toolbar" />
+        <include
+            layout="@layout/app_bar_layout"
+            android:id="@+id/home_page_toolbar" />
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/home_tabs"
@@ -24,8 +26,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="100dp">
-
-
     </androidx.viewpager.widget.ViewPager>
 
 </RelativeLayout>
