--- a/app/src/main/res/layout/activity_user_settings.xml
+++ b/app/src/main/res/layout/activity_user_settings.xml
@@ -54,35 +54,26 @@
         android:textAlignment="center"
         android:layout_marginLeft="10dp" />
 
-    <LinearLayout
-        android:id="@+id/usernamelayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/display_name"
+
+    <TextView
+        android:id="@+id/display_username"
+        android:layout_width="127dp"
+        android:layout_height="30dp"
+        android:layout_above="@+id/btn_delete"
+        android:layout_below="@+id/display_name"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="14dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="152dp"
+        android:layout_marginLeft="152dp"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="345dp"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:text="Username - "
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/display_username"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/username"
-            android:textSize="20sp" />
-    </LinearLayout>
-
+        android:layout_marginEnd="131dp"
+        android:layout_marginRight="131dp"
+        android:layout_marginBottom="179dp"
+        android:text="@string/username"
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/btn_delete"
