--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -44,7 +44,7 @@
         android:layout_marginStart="20sp"
         android:layout_marginLeft="10sp"
         android:layout_marginBottom="15dp"
-        android:hint="@string/username_hint"
+        android:hint="@string/email_hint"
         android:importantForAutofill="no"
         android:inputType="textPersonName" />
 
