--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -62,7 +62,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/idSignupPassword"
         android:layout_marginBottom="15dp"
-        android:hint="@string/email_hint"
+        android:hint="@string/email_signup"
         android:inputType="textEmailAddress" />
 
     <EditText
